@@ -77,6 +77,10 @@ Use TCP for the relay transport (default \- UDP). Implies options \fB\-t\fP, \fB
 and ignores flags and options \fB\-s\fP, \fB\-e\fP, \fB\-r\fP and \fB\-g\fP.
 .TP
 .B
+\fB\-P\fP
+Passive TCP (RFC6062 with active peer). Implies \fB\-T\fP.
+.TP
+.B
 \fB\-S\fP
 Secure connection: TLS for TCP, DTLS for UDP.
 .TP
