@@ -692,6 +692,19 @@ static int set_socket_options(ioa_socket_handle s)
 		if (result < 0)
 			perror("TCP_NODELAY");
 		socket_tcp_set_keepalive(s->fd);
+
+		{
+			struct linger so_linger;
+			so_linger.l_onoff = 1;
+			so_linger.l_linger = 0;
+			if(setsockopt(s->fd,
+			    SOL_SOCKET,
+			    SO_LINGER,
+			    &so_linger,
+			    sizeof(so_linger))<1) {
+				perror("setsolinger");
+			}
+		}
 	}
 
 	s->default_ttl = get_raw_socket_ttl(s->fd, s->family);
